# union-fn

./: CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: rust.yml
benches/: cmp.rs
benches/interpreter/: context.rs  instr.rs  mod.rs  stack.rs
benches/interpreter/tail/: context.rs  instr.rs  mod.rs
macro/: Cargo.toml
macro/src/: analyse.rs  error.rs  expand.rs  generate.rs  lib.rs  method.rs  utils.rs
src/: lib.rs  main.rs
tests/: bytecode.rs  compile_tests.rs
tests/ui/fail/: context-type-bounds.rs  context-type-bounds.stderr  context-type-conflicting-01.rs  context-type-conflicting-01.stderr  context-type-conflicting-02.rs  context-type-conflicting-02.stderr  context-type-conflicting-03.rs  context-type-conflicting-03.stderr  context-type-generics-01.rs  context-type-generics-01.stderr  context-type-generics-02.rs  context-type-generics-02.stderr  context-type-missing-01.rs  context-type-missing-01.stderr  fn-generic-01.rs  fn-generic-01.stderr  fn-generic-02.rs  fn-generic-02.stderr  fn-invalid-context-01.rs  fn-invalid-context-01.stderr  fn-invalid-context-02.rs  fn-invalid-context-02.stderr  fn-invalid-context-03.rs  fn-invalid-context-03.stderr  fn-mismatch-abi-01.rs  fn-mismatch-abi-01.stderr  fn-mismatch-abi-02.rs  fn-mismatch-abi-02.stderr  fn-mismatch-async-01.rs  fn-mismatch-async-01.stderr  fn-mismatch-async-02.rs  fn-mismatch-async-02.stderr  fn-mismatch-const-01.rs  fn-mismatch-const-01.stderr  fn-mismatch-const-02.rs  fn-mismatch-const-02.stderr  fn-mismatch-unsafe-01.rs  fn-mismatch-unsafe-01.stderr  fn-mismatch-unsafe-02.rs  fn-mismatch-unsafe-02.stderr  (+35 more)
tests/ui/pass/: calculator.rs  collatz.rs  is-send-sync.rs  many-args.rs  no-context.rs  type-alias-01.rs  type-alias-02.rs  with-context.rs
