[package]
name = "union-fn"
version = "0.1.0"
documentation = "https://docs.rs/union-fn/"
description = "Proc. macro for creating efficient \"inline closures\"."
authors.workspace = true
repository.workspace = true
edition.workspace = true
readme.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true

[workspace.package]
authors = ["Robin Freyler <robin.freyler@gmail.com>"]
repository = "https://github.com/robbepop/union-fn"
edition = "2021"
readme = "README.md"
license = "MIT"
keywords = ["closure", "interpreter", "dispatch", "instruction", "function"]
categories = ["data-structures", "no-std", "emulators"]

[dependencies]
union-fn-macro = { version = "0.1.0", path = "macro" }

[dev-dependencies]
trybuild = { version = "1.0.60", features = ["diff"] }

[workspace]
members = ["macro"]
