[package]
name = "union-fn"
version = "0.2.0"
documentation = "https://docs.rs/union-fn/"
description = "Proc. macro for creating efficient \"inline closures\"."
authors.workspace = true
repository.workspace = true
edition.workspace = true
readme.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true

[workspace.package]
authors = ["Robin Freyler <robin.freyler@gmail.com>"]
repository = "https://github.com/robbepop/union-fn"
edition = "2021"
readme = "README.md"
license = "MIT"
keywords = ["closure", "interpreter", "dispatch", "instruction", "function"]
categories = ["data-structures", "no-std", "emulators"]

[dependencies]
union-fn-macro = { version = "0.2.0", path = "macro" }

[dev-dependencies]
trybuild = { version = "1.0.60", features = ["diff"] }
criterion = { version = "0.4", default-features = false }
wasmi_core = "0.6.0"

[workspace]
members = ["macro"]

[profile.bench]
lto = "fat"
codegen-units = 1

[[bench]]
name = "cmp"
harness = false
