[package]
name = "union-fn-macro"
version = "0.1.0"
documentation = "https://docs.rs/union-fn-macro/"
description = "Proc. macro implementation for creating efficient \"inline closures\"."
authors.workspace = true
repository.workspace = true
edition.workspace = true
readme.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true

[lib]
proc-macro = true

[dependencies]
syn = { version = "1", features = ["full", "extra-traits"] }
proc-macro2 = "1"
quote = "1"
heck = "0.4.0"
